--- a/index.html
+++ b/index.html
@@ -13,6 +13,130 @@
 <body>
   <!-- Main container -->
   <div role="main" id="main">
+    <article class="ui-active" id="cover">
+       <pre>
+       ,ggggggggggg,                                                                 
+      dP"""88""""""Y8,                         ,dPYb,         8I                     
+      Yb,  88      `8b                         IP'`Yb         8I                     
+       `"  88      ,8P                         I8  8I         8I                     
+           88aaaad8P"                          I8  8'         8I                     
+           88""""Y8ba    ,ggggg,   gg      gg  I8 dP    ,gggg,8I   ,ggg,    ,gggggg, 
+           88      `8b  dP"  "Y8gggI8      8I  I8dP    dP"  "Y8I  i8" "8i   dP""""8I 
+           88      ,8P i8'    ,8I  I8,    ,8I  I8P    i8'    ,8I  I8, ,8I  ,8'    8I 
+           88_____,d8',d8,   ,d8' ,d8b,  ,d8b,,d8b,_ ,d8,   ,d8b, `YbadP' ,dP     Y8,
+          88888888P"  P"Y8888P"   8P'"Y88P"`Y88P'"Y88P"Y8888P"`Y8888P"Y8888P      `Y8
+      </pre>
+      <pre>
+             ,gggg,                                                        
+           ,88"""Y8b,                                       I8             
+          d8"     `Y8                                       I8             
+         d8'   8b  d8                                    88888888          
+        ,8I    "Y88P'                                       I8             
+        I8'            ,ggggg,   gg      gg   ,ggg,,ggg,    I8   gg     gg 
+        d8            dP"  "Y8gggI8      8I  ,8" "8P" "8,   I8   I8     8I 
+        Y8,          i8'    ,8I  I8,    ,8I  I8   8I   8I  ,I8,  I8,   ,8I 
+        `Yba,,_____,,d8,   ,d8' ,d8b,  ,d8b,,dP   8I   Yb,,d88b,,d8b, ,d8I 
+          `"Y8888888P"Y8888P"   8P'"Y88P"`Y88P'   8I   `Y88P""Y8P""Y88P"888
+                                                                      ,d8I'
+                                                                    ,dP'8I 
+                                                                   ,8"  8I 
+                                                                   I8   8I 
+                                                                   `8, ,8I 
+                                                                    `Y8P" 
+      </pre>
+      <pre>
+       ,ggggggggggg,                                                                          
+      dP"""88""""""Y8,                                ,dPYb,                                  
+      Yb,  88      `8b                                IP'`Yb                                  
+       `"  88      ,8P                                I8  8I                                  
+           88aaaad8P"                                 I8  8'                                  
+           88""""Y8ba    ,ggggg,    ,ggg,,ggg,,ggg,   I8 dP       ,ggg,    ,gggggg,    ,g,    
+           88      `8b  dP"  "Y8ggg,8" "8P" "8P" "8,  I8dP   88ggi8" "8i   dP""""8I   ,8'8,   
+           88      ,8P i8'    ,8I  I8   8I   8I   8I  I8P    8I  I8, ,8I  ,8'    8I  ,8'  Yb  
+           88_____,d8',d8,   ,d8' ,dP   8I   8I   Yb,,d8b,  ,8I  `YbadP' ,dP     Y8,,8'_   8) 
+          88888888P"  P"Y8888P"   8P'   8I   8I   `Y88P'"Y88P"' 888P"Y8888P      `Y8P' "YY8P8P
+      </pre>
+    </article>
+    <article>
+      <h2>Lorem Ipsum</h2>
+      <p>Shank strip steak bresaola leberkäse, pork belly jowl short loin pig
+      ground round shankle pastrami ham. Jowl cow turkey shoulder. Hamburger
+      pork loin rump, chicken ball tip tail sirloin. Shoulder beef corned
+      beef short ribs. Swine turducken sirloin drumstick boudin brisket. Cow
+      pork loin jowl, beef andouille leberkäse strip steak pork. Swine
+      sausage spare ribs pork loin, pastrami beef pork chop pork belly.
+      Bacon ham chicken turkey ground round pork chop chuck. Bacon leberkäse
+      strip steak tongue brisket, kielbasa ribeye meatloaf turducken chicken
+      shankle flank turkey sausage tail. Sirloin shankle turducken tri-tip.
+      Andouille tenderloin sirloin, beef pork chop pastrami brisket tail
+      biltong turducken spare ribs pancetta ham hock jowl. Pancetta meatball
+      beef turducken, shankle pastrami flank boudin rump venison turkey
+      leberkäse cow drumstick andouille. Pastrami fatback tail pancetta
+      salami, beef kielbasa shankle shank bacon. Ham hock pancetta
+      frankfurter, fatback prosciutto flank kielbasa short ribs drumstick
+      sausage filet mignon pork belly.
+
+      <p>Short loin turducken pork belly turkey, strip steak pork loin beef bacon
+      fatback. Filet mignon boudin strip steak flank. T-bone venison ribeye cow,
+      tri-tip sausage beef ribs jowl chuck strip steak turducken salami rump. Strip
+      steak spare ribs beef pig, leberkäse shank ham prosciutto. Ground round jowl
+      tri-tip, andouille shoulder pig strip steak shankle. Chicken meatball spare
+      ribs, shank pork belly hamburger t-bone pork loin swine short loin. Flank filet
+      mignon brisket beef ribs ball tip capicola leberkäse chicken.  Prosciutto
+      pancetta ham leberkäse, tenderloin fatback meatball venison corned beef ball
+      tip filet mignon. Drumstick jerky pancetta, venison andouille pastrami tongue
+      biltong shank chicken. T-bone shoulder boudin venison, sausage frankfurter
+      pancetta beef bresaola pork loin kielbasa ball tip ground round. Bresaola
+      prosciutto swine filet mignon pork chop. Swine venison ground round, jerky jowl
+      salami ham filet mignon prosciutto leberkäse chicken. Ground round jowl short
+      ribs kielbasa ribeye pig. Swine filet mignon ham, salami short ribs pork
+      pancetta fatback corned beef turducken.
+      <h3>August 7, 2012<br/>:: Gruesome</h3>
+
+      <h2>Sit Dolor Amet</h2>
+      <p>Shank strip steak bresaola leberkäse, pork belly jowl short loin pig
+      ground round shankle pastrami ham. Jowl cow turkey shoulder. Hamburger
+      pork loin rump, chicken ball tip tail sirloin. Shoulder beef corned
+      beef short ribs. Swine turducken sirloin drumstick boudin brisket. Cow
+      pork loin jowl, beef andouille leberkäse strip steak pork. Swine
+      sausage spare ribs pork loin, pastrami beef pork chop pork belly.
+      Bacon ham chicken turkey ground round pork chop chuck. Bacon leberkäse
+      strip steak tongue brisket, kielbasa ribeye meatloaf turducken chicken
+      shankle flank turkey sausage tail. Sirloin shankle turducken tri-tip.
+      Andouille tenderloin sirloin, beef pork chop pastrami brisket tail
+      biltong turducken spare ribs pancetta ham hock jowl. Pancetta meatball
+      beef turducken, shankle pastrami flank boudin rump venison turkey
+      leberkäse cow drumstick andouille. Pastrami fatback tail pancetta
+      salami, beef kielbasa shankle shank bacon. Ham hock pancetta
+      frankfurter, fatback prosciutto flank kielbasa short ribs drumstick
+      sausage filet mignon pork belly.
+
+      <p>Short loin turducken pork belly turkey, strip steak pork loin beef bacon
+      fatback. Filet mignon boudin strip steak flank. T-bone venison ribeye cow,
+      tri-tip sausage beef ribs jowl chuck strip steak turducken salami rump. Strip
+      steak spare ribs beef pig, leberkäse shank ham prosciutto. Ground round jowl
+      tri-tip, andouille shoulder pig strip steak shankle. Chicken meatball spare
+      ribs, shank pork belly hamburger t-bone pork loin swine short loin. Flank filet
+      mignon brisket beef ribs ball tip capicola leberkäse chicken.  Prosciutto
+      pancetta ham leberkäse, tenderloin fatback meatball venison corned beef ball
+      tip filet mignon. Drumstick jerky pancetta, venison andouille pastrami tongue
+      biltong shank chicken. T-bone shoulder boudin venison, sausage frankfurter
+      pancetta beef bresaola pork loin kielbasa ball tip ground round. Bresaola
+      prosciutto swine filet mignon pork chop. Swine venison ground round, jerky jowl
+      salami ham filet mignon prosciutto leberkäse chicken. Ground round jowl short
+      ribs kielbasa ribeye pig. Swine filet mignon ham, salami short ribs pork
+      pancetta fatback corned beef turducken.
+
+      <h3>July 31, 2012<br/>:: Ruckus</h3>
+    </article>
+    <article>
+      <img src=/assets/img/b5.jpg>
+    </article>
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
   </div>
 
   <!-- Dependencies -->
